--- a/thefeed.html
+++ b/thefeed.html
@@ -7,7 +7,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Welcome to The Feed🫐</title>
+        <title>🫐Welcome to The Feed🫐</title>
         <meta name="description" content="social media site">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/stylesheet.css">
@@ -74,7 +74,7 @@
                 <p>my beautiful little explore page on instagram</p>
             </section>
             <section>
-                <img src="img/screensaver.png" alt="my everyday screensaver">
+                <img src="img/screensaver.PNG" alt="my everyday screensaver">
                 <p>my everyday screensaver </p>
             </section>
         </main>
