--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
         <div id="splashgif">
             <a href=thefeed.html>
                 <h3>click to feed!</h3>
-                <img src="img/thefeed_gif.GIF" alt="gif of a monster chewing">
+                <img src="img/thefeed_gif.GIF" alt="gif of a monster chewing" >
                 <!--you need to make sure you resize (in photoshop) the gif to be large-->
                 <!--also see if you wanna make "click the feed!" round and a gif-->
             </a>
+            <p>"nom nom nom"</p>
         </div>
         
         
