--- a/thefeed.html
+++ b/thefeed.html
@@ -24,13 +24,40 @@
         </header>
 
         <nav>
-            <h3>Welcome to my feed</h3>
+            <h3>check out my friends!</h3>
+            <a href="https://jrbothe.github.io/thefeed/index.html" target="_blank">
+                <h5>Josh Bothe</h5>
+            </a>
+            <a href="https://emcortez.github.io/thefeed/" target="_blank">
+                <h5>Emely Cortez</h5>
+            </a>
+            <a href="https://ddbecerragarcia.github.io/thefeed/index.html" target="_blank">
+                <h5>Daine Becerra Garcia</h5>
+            </a>
+            <a href="https://jvsangalang.github.io/thefeed/" target="_blank">
+                <h5>Julianna Sangalang</h5>
+            </a>
+            <a href="https://lcvaughan.github.io/thefeed/" target="_blank">
+                <h5>Liberty Vaughan</h5>
+            </a>
+            <a href="https://avayng.github.io/thefeed/" target="_blank">
+                <h5>Ava Lang</h5>
+            </a>
+            <a href="https://nariiino.github.io/thefeed/index.html" target="_blank">
+                <h5>Anna Maiorino</h5>
+            </a>
+            <a href="https://gacopeland.github.io/thefeed/" target="_blank">
+                <h5>Grace Copeland</h5>
+            </a>
         </nav>
 
         <main>
             <p>The Feed!</p>
             <section>
-                <img src="img/screenrecording.MP4" alt="screen recording of text message" width="300">
+                <video width="320" controls>
+                    <source src="img/screenrecording.MP4" type="video/mp4">
+                    Your browser does not support the video tag.
+                  </video>
                 <p>getting ready for THE FEED</p>
             </section>
             <section>
