--- a/thefeed.html
+++ b/thefeed.html
@@ -49,6 +49,18 @@
             <a href="https://gacopeland.github.io/thefeed/" target="_blank">
                 <h5>Grace Copeland</h5>
             </a>
+            <a href="https://ckkillilea.github.io/thefeed/" target="_blank">
+                <h5>Chloe Killilea</h5>
+            </a>
+            <a href="https://gemoxley.github.io/thefeed/" target="_blank">
+                <h5>Gray Moxley</h5>
+            </a>
+            <a href="https://gecookston.github.io/thefeed/" target="_blank">
+                <h5>Grace Cookston</h5>
+            </a>
+            <a href="https://adrianna21.github.io/thefeed/" target="_blank">
+                <h5>Adrianna De la Rosa</h5>
+            </a>
         </nav>
 
         <main>
@@ -62,11 +74,11 @@
             </section>
             <section>
                 <img src="img/morning.png" alt=screenshot of morning screen>
-                <p>Even though my alarm says 6:30, I ALWAYS hit snooze</p>
+                <p>even though my alarm says 6:30, I ALWAYS hit snooze</p>
             </section>
             <section>
                 <img src="img/pinterest_moth.png" alt="pinterest board with a moth on it">
-                <p>My Pinterest board definitely says a lot about me</p>
+                <p>idk what my Pinterest board definitely says a lot about me but I love it</p>
             </section>
             <section>
                 <img src="img/pinterest_sweater.png" alt="pinterest board with a sweater on it">
@@ -74,7 +86,7 @@
             </section>
             <section>
                 <img src="img/instagram.png" alt="a little look at what my instagram looks like">
-                <p>a little look at what my instagram looks like</p>
+                <p>a little look at what my instagram feed looks like</p>
                 </section>
             <section>
                 <img src="img/cameraroll.PNG" alt="screenshot of my camera roll" width="300">
@@ -82,11 +94,11 @@
             </section>
             <section>
                 <img src="img/directions.png" alt="back home from Haight Street">
-                <p>vback home from Haight Street</p>
+                <p>my trek back home from Haight Street</p>
             </section>
             <section>
                 <img src="img/usf_id.png" alt="USF id">
-                <p>gotta enter a USF building I guess</p>
+                <p>gotta enter a USF building I guess!</p>
             </section>
             <section>
                 <img src="img/abs.png" alt="ab advertisements">
@@ -106,7 +118,7 @@
             </section>
         </main>
         <footer>
-            <p>check out my foot</p>
+            <p>🍪cookies🍪</p>
         </footer>
         
         
