--- a/thefeed.html
+++ b/thefeed.html
@@ -118,7 +118,7 @@
             </section>
         </main>
         <footer>
-            <p>🍪cookies🍪</p>
+            <p>and that's the feed!</p>
         </footer>
         
         
